# ncbl_prediction_script

./: .gitignore  README.md  _run_config.json  _season5.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: CAPABILITIES.md  QUICKSTART.md
ncbl/: __init__.py  ai_layer.py  challonge.py  cli.py  coaching.py  config.py  loader.py  ncblast_json.py  ncblast_parser.py  points.py  prediction.py  report.py  sheet_source.py  simulate.py  standings.py  viz.py
ncbl_prediction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ai_layer.py  test_challonge.py  test_coaching.py  test_json_parser.py  test_parser.py  test_points.py  test_prediction.py  test_ranks.py  test_report.py  test_sheet_source.py
