[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ncbl-prediction"
version = "0.1.0"
description = "NCBL ranking prediction + coaching + video pipeline (data-driven, no AI at runtime)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "xchan04" }]
dependencies = [
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ncbl = "ncbl.cli:main"

[tool.setuptools]
packages = ["ncbl"]
